# dns_explorer

./: DNSExplorer.py  README.md  README_DuckDB.md  check_database.py  dns-cli-prd.md  dns_to_duckdb.py  domain_list_all.txt  domain_list_all_1000.txt  domain_list_all_125m.txt  pyproject.toml  requirements.txt
.cursor/rules/: my-stack-rules.mdc
data/: dns_explorer.db  dns_explorer_v1.db  dns_explorer_v2.db  dns_explorer_v3.db  dns_explorer_v4.db  dns_explorer_v5.db  dns_explorer_v6.db  resultado_ns.json  resultados_01.json  resultados_02.json  resultados_03.json  resultados_04.json  resultados_05.json  resultados_06.json  resultados_batch.json  teste.json  teste_dns.db  teste_email.json  teste_https.json  teste_https_google.json
tests/: teste.py  tests_email_validation.py
