[tool.poetry]
name = "cli-dns"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Etiane Marcelino <etianezaumarcelino@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dnspython = "^2.6.1"
duckdb = "^1.1.0"
pandas = "^2.2.1"
pyopenssl = "^24.0.0"
requests = "^2.31.0"
cryptography = "^42.0.0"
matplotlib = "^3.8.2"
python-dotenv = "^1.1.0"
seaborn = "^0.13.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
